# EuoraCraft-Launcher

./: .gitignore  EuoraCraft-Launcher.spec  README.md  main.py  pyproject.toml  requirements.txt
ECL/: __init__.py  launcher.py
ECL/Core/: __init__.py  config.py  logger.py
ECL/game/: AccountManager.py  MicrosoftAuth.py  __init__.py  java.py
ECL/game/Core/: C_Downloader.py  C_FilesChecker.py  C_GetGames.py  C_Libs.py  ECLauncherCore.py  InstancesManager.py  __init__.py
ECL/game/Core.backup/: C_Downloader.py  C_FilesChecker.py  C_GetGames.py  C_Libs.py  C_Skin.py  ECLauncherCore.py  InstancesManager.py  __init__.py
ECL/ui/: ui.py
docs/: ReadME.md
test/: auth.py  minecraft_auth.py  test_tool.py
test/AIECLCore/: C_Downloader.py  C_FilesChecker.py  C_GetGames.py  C_Libs.py  ECLauncherCore.py  __init__.py
test/Core/: C_Downloader.py  C_FilesChecker.py  C_GetGames.py  C_Libs.py  ECLauncherCore.py
